--- a/your-code/intro_pandas_AN.ipynb
+++ b/your-code/intro_pandas_AN.ipynb
@@ -18,11 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -34,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -62,13 +65,17 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 261,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "a = pd.Series(lst)\n",
+    "\n",
+    "a"
    ]
   },
   {
@@ -82,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -91,13 +98,15 @@
        "74.4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 262,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "a[2]"
    ]
   },
   {
@@ -109,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,32 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your code here"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 5. Rename the data frame columns based on the names in the list below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "colnames = ['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -175,6 +159,166 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61.3</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>87.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>73.2</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>91.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>35.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>31.8</td>\n",
+       "      <td>89.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>23.3</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>26.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>27.6</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>53.8</td>\n",
+       "      <td>88.8</td>\n",
+       "      <td>68.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>96.6</td>\n",
+       "      <td>96.4</td>\n",
+       "      <td>53.4</td>\n",
+       "      <td>72.4</td>\n",
+       "      <td>50.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>73.7</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>43.2</td>\n",
+       "      <td>81.6</td>\n",
+       "      <td>34.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0     1     2     3     4\n",
+       "0  53.1  95.0  67.5  35.0  78.4\n",
+       "1  61.3  40.8  30.8  37.8  87.6\n",
+       "2  20.6  73.2  44.2  14.6  91.8\n",
+       "3  57.4   0.1  96.1   4.2  69.5\n",
+       "4  83.6  20.5  85.4  22.8  35.9\n",
+       "5  49.0  69.0   0.1  31.8  89.1\n",
+       "6  23.3  40.7  95.0  83.8  26.9\n",
+       "7  27.6  26.4  53.8  88.8  68.5\n",
+       "8  96.6  96.4  53.4  72.4  50.1\n",
+       "9  73.7  39.0  43.2  81.6  34.7"
+      ]
+     },
+     "execution_count": 264,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "\n",
+    "df = pd.DataFrame(b)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Rename the data frame columns based on the names in the list below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colnames = ['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
        "      <th></th>\n",
        "      <th>Score_1</th>\n",
        "      <th>Score_2</th>\n",
@@ -269,26 +413,29 @@
        "</div>"
       ],
       "text/plain": [
-       "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
-       "0     53.1     95.0     67.5     35.0     78.4\n",
-       "1     61.3     40.8     30.8     37.8     87.6\n",
-       "2     20.6     73.2     44.2     14.6     91.8\n",
-       "3     57.4      0.1     96.1      4.2     69.5\n",
-       "4     83.6     20.5     85.4     22.8     35.9\n",
-       "5     49.0     69.0      0.1     31.8     89.1\n",
-       "6     23.3     40.7     95.0     83.8     26.9\n",
-       "7     27.6     26.4     53.8     88.8     68.5\n",
-       "8     96.6     96.4     53.4     72.4     50.1\n",
-       "9     73.7     39.0     43.2     81.6     34.7"
+       "  Score_1 Score_2 Score_3 Score_4 Score_5\n",
+       "0    53.1    95.0    67.5    35.0    78.4\n",
+       "1    61.3    40.8    30.8    37.8    87.6\n",
+       "2    20.6    73.2    44.2    14.6    91.8\n",
+       "3    57.4     0.1    96.1     4.2    69.5\n",
+       "4    83.6    20.5    85.4    22.8    35.9\n",
+       "5    49.0    69.0     0.1    31.8    89.1\n",
+       "6    23.3    40.7    95.0    83.8    26.9\n",
+       "7    27.6    26.4    53.8    88.8    68.5\n",
+       "8    96.6    96.4    53.4    72.4    50.1\n",
+       "9    73.7    39.0    43.2    81.6    34.7"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "df.columns = [colnames]\n",
+    "df"
    ]
   },
   {
@@ -300,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -316,13 +463,13 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
+       "    <tr>\n",
        "      <th></th>\n",
        "      <th>Score_1</th>\n",
        "      <th>Score_3</th>\n",
@@ -395,26 +542,30 @@
        "</div>"
       ],
       "text/plain": [
-       "   Score_1  Score_3  Score_5\n",
-       "0     53.1     67.5     78.4\n",
-       "1     61.3     30.8     87.6\n",
-       "2     20.6     44.2     91.8\n",
-       "3     57.4     96.1     69.5\n",
-       "4     83.6     85.4     35.9\n",
-       "5     49.0      0.1     89.1\n",
-       "6     23.3     95.0     26.9\n",
-       "7     27.6     53.8     68.5\n",
-       "8     96.6     53.4     50.1\n",
-       "9     73.7     43.2     34.7"
+       "  Score_1 Score_3 Score_5\n",
+       "0    53.1    67.5    78.4\n",
+       "1    61.3    30.8    87.6\n",
+       "2    20.6    44.2    91.8\n",
+       "3    57.4    96.1    69.5\n",
+       "4    83.6    85.4    35.9\n",
+       "5    49.0     0.1    89.1\n",
+       "6    23.3    95.0    26.9\n",
+       "7    27.6    53.8    68.5\n",
+       "8    96.6    53.4    50.1\n",
+       "9    73.7    43.2    34.7"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "subset = df.loc[:,['Score_1', 'Score_3', 'Score_5']]\n",
+    "subset\n",
+    "\n"
    ]
   },
   {
@@ -426,22 +577,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "56.95000000000001"
+       "Score_3    56.95\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "df['Score_3'].mean()\n",
+    "\n"
    ]
   },
   {
@@ -453,22 +608,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "88.8"
+       "Score_4    88.8\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "df['Score_4'].max()"
    ]
   },
   {
@@ -480,22 +638,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "40.75"
+       "Score_2    40.75\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 270,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "df['Score_2'].median()"
    ]
   },
   {
@@ -507,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -647,13 +808,17 @@
        "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "df_product_orders = pd.DataFrame(orders)\n",
+    "\n",
+    "df_product_orders\n"
    ]
   },
   {
@@ -665,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +843,13 @@
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "quantity_sum = df_product_orders['Quantity'].sum()\n",
+    "revenue_sum = df_product_orders['Revenue'].sum()\n",
+    "\n",
+    "print(f'''Total quantity is: {quantity_sum}\n",
+    "Total Revenue is: {revenue_sum}''')"
    ]
   },
   {
@@ -690,57 +861,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prices for the most expansive items ordered:\n",
-      " 0     1.65\n",
-      "2     1.65\n",
-      "7     4.95\n",
-      "6    11.95\n",
-      "Name: UnitPrice, dtype: float64 \n",
-      "\n",
-      "\n",
-      "Prices for the least expansive items ordered:\n",
-      " 3    0.18\n",
+      "Prices of the 4 least expensive items: \n",
+      "3    0.18\n",
       "8    0.19\n",
       "1    0.55\n",
       "5    0.85\n",
-      "Name: UnitPrice, dtype: float64 \n",
+      "Name: UnitPrice, dtype: float64\n",
       "\n",
-      "\n"
+      "Prices of the 4 most expensive items: \n",
+      "0     1.65\n",
+      "2     1.65\n",
+      "7     4.95\n",
+      "6    11.95\n",
+      "Name: UnitPrice, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "\n",
+    "# Sorting values by ascending order and obtaining the four least expensive of them\n",
+    "four_least_expensive_items = df_product_orders['UnitPrice'].sort_values()[:4]\n",
+    "\n",
+    "# Sorting values by ascending order and obtaining the four most expensi of them\n",
+    "four_most_expensive_items = df_product_orders['UnitPrice'].sort_values()[-4:]\n",
+    "\n",
+    "print(f'Prices of the 4 least expensive items: \\n{four_least_expensive_items}')\n",
+    "print()\n",
+    "print(f'Prices of the 4 most expensive items: \\n{four_most_expensive_items}')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The difference between the most expansive and least expansive : [ 1.47  1.46  4.4  11.1 ]\n"
+      "Difference between the most expensive and cheapest items:\n",
+      "0     1.47\n",
+      "1     1.46\n",
+      "2     4.40\n",
+      "3    11.10\n",
+      "Name: UnitPrice, dtype: float64\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Metod 1\n",
+    "\n",
+    "# Reset the indexes in order to perform substraction\n",
+    "\n",
+    "four_most_expensive_items.reset_index(drop=True, inplace=True)\n",
+    "four_least_expensive_items.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "# Calculate the difference\n",
+    "\n",
+    "difference_m1 = four_most_expensive_items - four_least_expensive_items\n",
+    "\n",
+    "# Print the difference\n",
+    "\n",
+    "print('Difference between the most expensive and cheapest items:')\n",
+    "print(difference_m1)\n",
+    "\n",
+    "# Output is Panda Series\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 283,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Difference between the most expensive and cheapest items:\n",
+      "[ 1.47  1.46  4.4  11.1 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Metod 2\n",
+    "\n",
+    "expensive = np.array(four_most_expensive_items)\n",
+    "cheapest = np.array(four_least_expensive_items)\n",
+    "\n",
+    "difference_m2 = expensive - cheapest\n",
+    "\n",
+    "print('Difference between the most expensive and cheapest items:')\n",
+    "print(difference_m2)\n",
+    "\n",
+    "# Output is numpy array\n"
+   ]
   }
  ],
  "metadata": {
@@ -759,7 +986,49 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.5"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
