--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,11 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -62,13 +64,15 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "df = pd.Series(lst)\n",
+    "df"
    ]
   },
   {
@@ -82,22 +86,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "74.4"
+       "84.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "df[3]"
    ]
   },
   {
@@ -109,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,11 +132,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61.3</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>87.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>73.2</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>91.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>35.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>31.8</td>\n",
+       "      <td>89.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>23.3</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>26.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>27.6</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>53.8</td>\n",
+       "      <td>88.8</td>\n",
+       "      <td>68.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>96.6</td>\n",
+       "      <td>96.4</td>\n",
+       "      <td>53.4</td>\n",
+       "      <td>72.4</td>\n",
+       "      <td>50.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>73.7</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>43.2</td>\n",
+       "      <td>81.6</td>\n",
+       "      <td>34.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0     1     2     3     4\n",
+       "0  53.1  95.0  67.5  35.0  78.4\n",
+       "1  61.3  40.8  30.8  37.8  87.6\n",
+       "2  20.6  73.2  44.2  14.6  91.8\n",
+       "3  57.4   0.1  96.1   4.2  69.5\n",
+       "4  83.6  20.5  85.4  22.8  35.9\n",
+       "5  49.0  69.0   0.1  31.8  89.1\n",
+       "6  23.3  40.7  95.0  83.8  26.9\n",
+       "7  27.6  26.4  53.8  88.8  68.5\n",
+       "8  96.6  96.4  53.4  72.4  50.1\n",
+       "9  73.7  39.0  43.2  81.6  34.7"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "df_1 = pd.DataFrame(b)\n",
+    "df_1"
    ]
   },
   {
@@ -147,12 +286,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colnames = ['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5']"
+    "columns = ['Score_1', 'Score_2', 'Score_3', 'Score_4', 'Score_5']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +318,7 @@
        "      <th>Score_1</th>\n",
        "      <th>Score_2</th>\n",
        "      <th>Score_3</th>\n",
-       "      <th>Score_4</th>\n",
+       "      <th>Score4</th>\n",
        "      <th>Score_5</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -269,26 +408,28 @@
        "</div>"
       ],
       "text/plain": [
-       "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
-       "0     53.1     95.0     67.5     35.0     78.4\n",
-       "1     61.3     40.8     30.8     37.8     87.6\n",
-       "2     20.6     73.2     44.2     14.6     91.8\n",
-       "3     57.4      0.1     96.1      4.2     69.5\n",
-       "4     83.6     20.5     85.4     22.8     35.9\n",
-       "5     49.0     69.0      0.1     31.8     89.1\n",
-       "6     23.3     40.7     95.0     83.8     26.9\n",
-       "7     27.6     26.4     53.8     88.8     68.5\n",
-       "8     96.6     96.4     53.4     72.4     50.1\n",
-       "9     73.7     39.0     43.2     81.6     34.7"
+       "   Score_1  Score_2  Score_3  Score4  Score_5\n",
+       "0     53.1     95.0     67.5    35.0     78.4\n",
+       "1     61.3     40.8     30.8    37.8     87.6\n",
+       "2     20.6     73.2     44.2    14.6     91.8\n",
+       "3     57.4      0.1     96.1     4.2     69.5\n",
+       "4     83.6     20.5     85.4    22.8     35.9\n",
+       "5     49.0     69.0      0.1    31.8     89.1\n",
+       "6     23.3     40.7     95.0    83.8     26.9\n",
+       "7     27.6     26.4     53.8    88.8     68.5\n",
+       "8     96.6     96.4     53.4    72.4     50.1\n",
+       "9     73.7     39.0     43.2    81.6     34.7"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "df_2 = df_1.rename(columns= {0:'Score_1', 1: 'Score_2',2:'Score_3',3:'Score4',4:'Score_5'})\n",
+    "df_2"
    ]
   },
   {
@@ -300,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -408,13 +549,14 @@
        "9     73.7     43.2     34.7"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "df_2[['Score_1','Score_3','Score_5']]"
    ]
   },
   {
@@ -426,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -435,13 +577,14 @@
        "56.95000000000001"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "df_2.mean(0)[2]"
    ]
   },
   {
@@ -453,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -462,13 +605,14 @@
        "88.8"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "df_2.max(0)[3]"
    ]
   },
   {
@@ -480,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -489,13 +633,14 @@
        "40.75"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "df_2.median(0)[1]"
    ]
   },
   {
@@ -507,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -647,13 +792,15 @@
        "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "df = pd.DataFrame(orders)\n",
+    "df"
    ]
   },
   {
@@ -665,20 +812,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here\n",
+    "quantity_sum = df['Quantity'].sum() \n",
+    "revenue_sum = df['Revenue'].sum() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total quantity is: 2978\n",
-      "Total Revenue is: 637.0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2978"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "quantity_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "637.0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "revenue_sum"
    ]
   },
   {
@@ -690,50 +870,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prices for the most expansive items ordered:\n",
-      " 0     1.65\n",
-      "2     1.65\n",
-      "7     4.95\n",
-      "6    11.95\n",
-      "Name: UnitPrice, dtype: float64 \n",
-      "\n",
-      "\n",
-      "Prices for the least expansive items ordered:\n",
-      " 3    0.18\n",
-      "8    0.19\n",
-      "1    0.55\n",
-      "5    0.85\n",
-      "Name: UnitPrice, dtype: float64 \n",
-      "\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "11.95"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "max_price = df['UnitPrice'].max()\n",
+    "max_price"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The difference between the most expansive and least expansive : [ 1.47  1.46  4.4  11.1 ]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.18"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "min_price = df['UnitPrice'].min()\n",
+    "min_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11.77"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max_price - min_price"
+   ]
   },
   {
    "cell_type": "code",
@@ -759,7 +955,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
